<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayingActivity">

    <TextView
        android:id="@+id/p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:text="@string/player_1"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/p1score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="0"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/p1"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/p1" />

    <TextView
        android:id="@+id/p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/player_2"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/p1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/p2score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="0"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/p2"
        app:layout_constraintStart_toEndOf="@+id/p1"
        app:layout_constraintTop_toBottomOf="@+id/p2" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/score"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="-"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/p2score"
        app:layout_constraintStart_toEndOf="@+id/p1score"
        app:layout_constraintTop_toBottomOf="@+id/p1" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/playAgainbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/r00"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="click"
                android:textColor="@color/black"
                android:textSize="50sp" />

            <Button
                android:id="@+id/r01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="click"
                android:textColor="@color/black"
                android:textSize="50sp" />

            <Button
                android:id="@+id/r02"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="click"
                android:textColor="@color/black"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/r10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="click"
                android:textColor="@color/black"
                android:textSize="50sp" />

            <Button
                android:id="@+id/r11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="click"
                android:textColor="@color/black"
                android:textSize="50sp" />

            <Button
                android:id="@+id/r12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="click"
                android:textColor="@color/black"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/r20"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="click"
                android:textColor="@color/black"
                android:textSize="50sp" />

            <Button
                android:id="@+id/r21"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="click"
                android:textColor="@color/black"
                android:textSize="50sp" />

            <Button
                android:id="@+id/r22"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="click"
                android:textColor="@color/black"
                android:textSize="50sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/playAgainbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="playAgain"
        android:text="@string/play_again"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/newGamebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="newGame"
        android:text="@string/new_game"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playAgainbtn"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <ImageView
        android:id="@+id/soundIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="32dp"
        android:onClick="changeSound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/p2score"
        app:layout_constraintTop_toBottomOf="@+id/p2"
        app:srcCompat="@drawable/ic_sound_on" />

</androidx.constraintlayout.widget.ConstraintLayout>